NONE: Update build, versions and configuration for graalvm (#322)
* NONE: Update build, versions and configuration for graalvm

* NONE: Update gradle wrapper to 7.4.1, and ensure .bat files have crlf endings

* NONE: Update to micronaut 3.4.0, and fix sonarque syntax error complaint